<resources>
    <string name="app_name">Formulario</string>
    <string name="login">Ingresar</string>
    <string name="get">Ver datos Guardados</string>
    <string name="greet">Hi!</string>
    <string name="name">Nombre</string>
    <string name="attribute">Atributo</string>
    <string name="rarity">Rareza</string>
    <string name="damage">Daño</string>
    <string name="uses">Usos</string>
    <string name="dateObtained">Fecha Obtenida</string>
    <string name="magic">Magia</string>
    <string name="title">Creación De Armamento</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="post">Enviar</string>
    <string name="clear">Limpiar</string>
    <string name="save">Guardar datos</string>
    <string name="back">Volver</string>
    <string name="delete">¿Seguro que quieres eliminar el armamento?</string>
</resources>