<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textSize="36sp"
            android:gravity="center"/>

        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/name" />

        <EditText
            android:id="@+id/etAttribute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:maxLength="20"
            android:hint="@string/attribute" />

        <EditText
            android:id="@+id/etRarity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="text"
            android:maxLength="10"
            android:hint="@string/rarity" />

        <EditText
            android:id="@+id/etDamage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:maxLength="8"
            android:hint="@string/damage" />

        <EditText
            android:id="@+id/etUses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:inputType="number"
            android:maxLength="8"
            android:hint="@string/uses" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/dateObtained" />

        <DatePicker
            android:id="@+id/cvDateObtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:text="@string/magic" />

        <ToggleButton
            android:id="@+id/tbMagic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textOn="@string/yes"
            android:textOff="@string/no"/>

        <TextView
            android:id="@+id/txtMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center" />


        <Button
            android:id="@+id/btnSendForm"
            android:onClick="changeDisplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post" />

        <Button
            android:id="@+id/btnClear"
            android:onClick="clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            android:text="@string/clear" />

    </LinearLayout>

</ScrollView>