<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="0, 1"
    android:padding="10dp">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/name"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/attribute"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtAttribute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/rarity"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtRarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/damage"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtDamage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/uses"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtUses"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"

            android:text="@string/dateObtained"
            android:textSize="16sp"
            android:background="@color/gray"
            android:paddingStart="10dp" />

        <TextView
            android:id="@+id/txtDateObtained"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/magic"
            android:textSize="16sp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/txtMagic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp" />

    </TableRow>

</TableLayout>